Correct CSS to account for light mode / dark mode preferences

--- a/style.css
+++ b/style.css
@@ -11,8 +11,24 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 500;
   --bs-body-line-height: 1.6;
-  --bs-body-color: #fff;
-  --bs-body-color-rgb: 255, 255, 255;
-  --bs-body-bg: var(--bs-dark);
-  --bs-body-bg-rgb: 33, 37, 41;
+  --bs-light: #f8f9fa;
+  --bs-light-rgb: 248, 249, 250;
+  --bs-dark: #1d1f2a;
+  --bs-dark-rgb: 33, 37, 41;
+
+    @media (prefers-color-scheme: dark) {
+        --bs-body-color: var(--bs-light);
+        --bs-body-color-rgb: var(--bs-light-rgb);
+        --bs-body-bg: var(--bs-dark);
+        --bs-body-bg-rgb: var(--bs-dark-rgb);
+    }
+
+    @media (prefers-color-scheme: light) {
+        --bs-body-color: var(--bs-dark);
+        --bs-body-color-rgb: var(--bs-dark-rgb);
+        --bs-body-bg: var(--bs-light);
+        --bs-body-bg-rgb: var(--bs-light-rgb);
+    }
 }
+
+
